Fixes alignment on action

--- a/src/tabs/styles.scss
+++ b/src/tabs/styles.scss
@@ -62,3 +62,7 @@
     padding-inline: awsui.$space-container-horizontal;
   }
 }
+
+.dismiss-button {
+  /* Only used as a selector for test-utils */
+}
